@@ -1,3 +1,8 @@
+2010-06-29  Patrice Dumas  <pertusus@free.fr>
+
+	delay config file message after daemonization
+	report from Benoit-Pierre Demaine.
+
 2010-05-30  Patrice Dumas  <pertusus@free.fr>
 
 	Really iterate over the str_list
